2009-11-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Bumped version to 0.6.3
	* pkgIndex.tcl: Ditto

2009-11-16  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* pdf_stat.tcl: Fix bug #2897419 - very small numbers with beta
	  distribution

2009-10-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* interpolate.tcl: Fix bug #2881739 in cubic interpolation

2009-09-28  Andreas Kupries  <andreask@activestate.com>

	* linalg.test: Switched the test setup back to 'regular' and also
	  fixed the version information in the non-regular branch of the
	  setup.

2009-08-21  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* statistics.tcl: Remove a local variable from interval-mean-stdev

2009-08-12  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* statistics.tcl: Solve bug 2835712 regarding interval-mean-stdev

2009-07-13  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* statistics.tcl: Implement more robust computation of basic statistics
	      Fixes bug 2812832; simplified the code (as indicated by akupries)
	* statistics.test: Added test for this more robust computation
	* linalg.tcl: Corrected dim and shape procedures for scalars (version now 1.1.3;
	      Fixes bug 2818958
	* linalg.test: Corrected result of dim and shape procedures for scalars
	* pkgIndex.tcl: Updated version numbers

2009-03-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* linalg.tcl: Solving bugs with test matrices (bugs #2695513, 2695564, 2695618)
	* linalg.test: Added test cases for border matrix and Wilkinson W- and W+
	* pkgIndex.tcl: Version of linear algebra package increased to 1.1.1

2009-02-18  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* machineparameters.man: Replaced deprecated markup (bug #2597454)

2009-02-06  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* pkgIndex.tcl: Added machineparameters package
	* machineparameters.tcl: New package by Michael Baudin
	* machineparameters.test: Test for the new package